P3_MARCO_GARCIA_PABLO_ROIG/tests/invalid/28_invalid_record_used_before_declaration.lava
Point p = new Point(1);
record Point(int x);
